# internal/transport/http/server.go
@@ -61,6 +61,7 @@ func NewServer(lc fx.Lifecycle, cfg config.Config, handler *Handler, authService
 	api.POST("/version", handler.Version)
 	api.POST("/me", handler.Me)
 	api.POST("/notifications/templates/put", handler.PutNotificationTemplate)
+	api.POST("/notifications/templates/list", handler.ListNotificationTemplates)
 	api.POST("/notifications/send", handler.SendNotification)
 	api.POST("/notifications/providers/receipt", handler.RecordProviderReceipt)
 	api.POST("/notifications/deliveries/get", handler.GetNotificationDelivery)
